--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import logoDetikcom from "@/assets/logo.png";
   <div class="isolate block">
     <a href="#">
       <img
-        src="https://online.detik.com/design/detik/assets/images/ads/grey-leaderboard.png"
+        src="https://design.detik.com/design/detik/assets/images/ads/grey-leaderboard.png"
         alt=""
       />
     </a>
