--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  This is 404 page
-</body>
-</html>
+---
+import MainLayout from "@/layouts/MainLayout.astro";
+---
+
+<MainLayout>
+    <div class="px-4">
+        <h1>404 - Page Not Found</h1>
+        <p>Sorry, the page you are looking for does not exist.</p>
+    </div>
+</MainLayout>
