--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,5 +2,5 @@
 @custom-variant dark (&:where(.dark, .dark *));
 @plugin "@tailwindcss/typography";
 @plugin "@tailwindcss/forms";
-@import "./fonts";
+@import "./fonts.css";
 @import "./default.css";
