--- a/src/components/ModalDialog.astro
+++ b/src/components/ModalDialog.astro
@@ -1,12 +1,12 @@
+---
+import Button from "@/components/button"
+---
+
 <div x-data="{ modalOpen: false }" @keydown.escape.window="modalOpen = false" class="relative z-50 h-auto w-auto">
-    <button
-        @click="modalOpen=true"
-        class="inline-flex h-10 items-center justify-center rounded-md border bg-white px-4 py-2 text-sm font-medium transition-colors hover:bg-neutral-100 focus:bg-white focus:ring-2 focus:ring-neutral-200/60 focus:ring-offset-2 focus:outline-none active:bg-white disabled:pointer-events-none disabled:opacity-50"
-    >
-        Open Modal
-    </button>
-    <template x-teleport="body" data-teleport-template="true">
-        <div x-show="modalOpen" class="fixed top-0 left-0 z-[99] flex h-screen w-screen items-center justify-center" x-cloak="">
+    <Button variant="outline" @click="modalOpen=true">Open Modal Dialog</Button>
+
+    <template x-teleport="body">
+        <div x-show="modalOpen" class="fixed top-0 left-0 z-[99] flex h-screen w-screen items-center justify-center" x-cloak>
             <div
                 x-show="modalOpen"
                 x-transition:enter="ease-out duration-300"
@@ -16,34 +16,50 @@
                 x-transition:leave-start="opacity-100"
                 x-transition:leave-end="opacity-0"
                 @click="modalOpen=false"
-                class="absolute inset-0 h-full w-full bg-black/40"
+                class="absolute inset-0 h-full w-full bg-gray-900/50 backdrop-blur-sm"
             >
             </div>
             <div
                 x-show="modalOpen"
                 x-trap.inert.noscroll="modalOpen"
                 x-transition:enter="ease-out duration-300"
-                x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+                x-transition:enter-start="opacity-0 scale-90"
+                x-transition:enter-end="opacity-100 scale-100"
                 x-transition:leave="ease-in duration-200"
-                x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
-                x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                class="relative w-full bg-white px-7 py-6 sm:max-w-lg sm:rounded-lg"
+                x-transition:leave-start="opacity-100 scale-100"
+                x-transition:leave-end="opacity-0 scale-90"
+                class="relative w-full bg-white/90 px-7 py-6 shadow-md drop-shadow-md backdrop-blur-sm sm:max-w-lg sm:rounded-lg"
             >
-                <div class="flex items-center justify-between pb-2">
-                    <h3 class="text-lg font-semibold">Modal Title</h3>
-                    <button
-                        @click="modalOpen=false"
-                        class="absolute top-0 right-0 mt-5 mr-5 flex h-8 w-8 items-center justify-center rounded-full text-gray-600 hover:bg-gray-50 hover:text-gray-800"
-                    >
-                        <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                            ><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path></svg
+                <slot>
+                    <div class="flex items-center justify-between pb-3 dark:text-black">
+                        <h3 class="text-lg font-semibold">Modal Title</h3>
+                        <button
+                            @click="modalOpen=false"
+                            class="absolute top-0 right-0 mt-5 mr-5 flex h-8 w-8 items-center justify-center rounded-full text-gray-600 hover:bg-gray-50 hover:text-gray-800"
                         >
-                    </button>
-                </div>
-                <div class="relative w-auto">
-                    <p>This is placeholder text. Replace it with your own content.</p>
-                </div>
+                            <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                                ><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path></svg
+                            >
+                        </button>
+                    </div>
+                    <div class="relative w-auto pb-8 dark:text-black">
+                        <p>This is placeholder text. Replace it with your own content.</p>
+                    </div>
+                    <div class="flex flex-col-reverse sm:flex-row sm:justify-between sm:space-x-2">
+                        <button
+                            @click="modalOpen=false"
+                            type="button"
+                            class="inline-flex h-10 items-center justify-center rounded-md border px-4 py-2 text-sm font-medium transition-colors focus:ring-2 focus:ring-neutral-100 focus:ring-offset-2 focus:outline-hidden"
+                            >Previous</button
+                        >
+                        <button
+                            @click="modalOpen=false"
+                            type="button"
+                            class="inline-flex h-10 items-center justify-center rounded-md border border-transparent bg-neutral-950 px-4 py-2 text-sm font-medium text-white transition-colors hover:bg-neutral-900 focus:ring-2 focus:ring-neutral-900 focus:ring-offset-2 focus:outline-hidden"
+                            >Next</button
+                        >
+                    </div>
+                </slot>
             </div>
         </div>
     </template>
