--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,26 +1,273 @@
 ---
-import { BASE_URL } from "@/consts"
-
 import MainLayout from "@/layouts/MainLayout.astro"
-import ButtonOrLink from "@/components/ui/ButtonOrLink.astro"
-import Grid from "@/components/ui/Grid.astro"
-import Heading from "@/components/ui/Heading.astro"
-import Accordion from "@/components/Accordion.astro"
+import Button from "@/components/button"
 import ModalDialog from "@/components/ModalDialog.astro"
-import NavLink from "@/components/NavLink.astro"
-import Swap from "@/components/Swap.astro"
 ---
 
 <MainLayout>
-    <Grid className="mb-8 bg-linear-180" sidebarClassName="gap-4">
-        <Heading size="h3" tagType="h2">Test heading Component</Heading>
-        <div class="mb-4 flex items-end gap-2">
-            <NavLink href={BASE_URL}>Home</NavLink>
-            <ButtonOrLink as="a" href="#" variant={"default"} size={"xs"}>xs Default</ButtonOrLink>
-            <ButtonOrLink as="button" type="button" variant={"dark"} size={"sm"}>sm Dark</ButtonOrLink>
-            <ModalDialog />
-            <Swap />
+    <div class="relative">
+        <div class="mx-auto max-w-7xl">
+            <div class="relative z-10 pt-14 lg:w-full lg:max-w-2xl">
+                <svg
+                    class="absolute inset-y-0 right-8 hidden h-full w-80 translate-x-1/2 transform fill-white lg:block"
+                    viewBox="0 0 100 100"
+                    preserveAspectRatio="none"
+                    aria-hidden="true"
+                >
+                    <polygon points="0,0 90,0 50,100 0,100"></polygon>
+                </svg>
+
+                <div class="relative px-6 py-32 sm:py-40 lg:px-8 lg:py-56 lg:pr-0">
+                    <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-xl">
+                        <div class="hidden sm:mb-10 sm:flex">
+                            <div class="relative rounded-full px-3 py-1 text-sm/6 text-gray-500 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+                                Anim aute id magna aliqua ad ad non deserunt sunt. <a href="#" class="font-semibold whitespace-nowrap text-indigo-600"
+                                    ><span class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a
+                                >
+                            </div>
+                        </div>
+                        <h1 class="text-5xl font-semibold tracking-tight text-pretty text-gray-900 sm:text-7xl">Data to enrich your business</h1>
+                        <p class="mt-8 text-lg font-medium text-pretty text-gray-500 sm:text-xl/8">
+                            Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.
+                        </p>
+                        <div class="mt-10 flex items-center gap-x-6">
+                            <Button
+                                variant="secondary"
+                                class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                                href="#"
+                            >
+                                Get Started
+                            </Button>
+                            <Button href="#" variant="ghost" class="text-sm/6 font-semibold text-gray-900">Learn more <span aria-hidden="true">→</span></Button>
+                            <ModalDialog />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <Accordion />
-    </Grid>
+        <div class="bg-gray-50 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
+            <img
+                class="aspect-3/2 object-cover lg:aspect-auto lg:size-full"
+                src="https://images.unsplash.com/photo-1483389127117-b6a2102724ae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80"
+                alt=""
+            />
+        </div>
+    </div>
+
+    <div class="bg-white pt-24 sm:pt-32">
+        <div class="mx-auto max-w-7xl px-6 lg:px-8">
+            <div class="mx-auto max-w-2xl text-center">
+                <h2 class="text-4xl font-semibold tracking-tight text-balance text-gray-900 sm:text-5xl">From the blog</h2>
+                <p class="mt-2 text-lg/8 text-gray-600">Learn how to grow your business with our expert advice.</p>
+            </div>
+            <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+                <article class="flex flex-col items-start justify-between">
+                    <div class="relative w-full">
+                        <img
+                            src="https://images.unsplash.com/photo-1496128858413-b36217c2ce36?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3603&q=80"
+                            alt=""
+                            class="aspect-video w-full rounded-2xl bg-gray-100 object-cover sm:aspect-2/1 lg:aspect-3/2"
+                        />
+                        <div class="absolute inset-0 rounded-2xl ring-1 ring-gray-900/10 ring-inset"></div>
+                    </div>
+                    <div class="max-w-xl">
+                        <div class="mt-8 flex items-center gap-x-4 text-xs">
+                            <time datetime="2020-03-16" class="text-gray-500"> Mar 16, 2020 </time>
+                            <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100"> Marketing </a>
+                        </div>
+                        <div class="group relative">
+                            <h3 class="mt-3 text-lg/6 font-semibold text-gray-900 group-hover:text-gray-600">
+                                <a href="#">
+                                    <span class="absolute inset-0"></span>
+                                    Boost your conversion rate
+                                </a>
+                            </h3>
+                            <p class="mt-5 line-clamp-3 text-sm/6 text-gray-600">
+                                Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat
+                                consectetur nulla deserunt vel. Iusto corrupti dicta.
+                            </p>
+                        </div>
+                        <div class="relative mt-8 flex items-center gap-x-4">
+                            <img
+                                src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                                alt=""
+                                class="size-10 rounded-full bg-gray-100"
+                            />
+                            <div class="text-sm/6">
+                                <p class="font-semibold text-gray-900">
+                                    <a href="#">
+                                        <span class="absolute inset-0"></span>
+                                        Michael Foster
+                                    </a>
+                                </p>
+                                <p class="text-gray-600">Co-Founder / CTO</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="flex flex-col items-start justify-between">
+                    <div class="relative w-full">
+                        <img
+                            src="https://images.unsplash.com/photo-1547586696-ea22b4d4235d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80"
+                            alt=""
+                            class="aspect-video w-full rounded-2xl bg-gray-100 object-cover sm:aspect-2/1 lg:aspect-3/2"
+                        />
+                        <div class="absolute inset-0 rounded-2xl ring-1 ring-gray-900/10 ring-inset"></div>
+                    </div>
+                    <div class="max-w-xl">
+                        <div class="mt-8 flex items-center gap-x-4 text-xs">
+                            <time datetime="2020-03-10" class="text-gray-500">Mar 10, 2020</time>
+                            <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Sales</a>
+                        </div>
+                        <div class="group relative">
+                            <h3 class="mt-3 text-lg/6 font-semibold text-gray-900 group-hover:text-gray-600">
+                                <a href="#">
+                                    <span class="absolute inset-0"></span>
+                                    How to use search engine optimization to drive sales
+                                </a>
+                            </h3>
+                            <p class="mt-5 line-clamp-3 text-sm/6 text-gray-600">Optio cum necessitatibus dolor voluptatum provident commodi et. Qui aperiam fugiat nemo cumque.</p>
+                        </div>
+                        <div class="relative mt-8 flex items-center gap-x-4">
+                            <img
+                                src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                                alt=""
+                                class="size-10 rounded-full bg-gray-100"
+                            />
+                            <div class="text-sm/6">
+                                <p class="font-semibold text-gray-900">
+                                    <a href="#">
+                                        <span class="absolute inset-0"></span>
+                                        Lindsay Walton
+                                    </a>
+                                </p>
+                                <p class="text-gray-600">Front-end Developer</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="flex flex-col items-start justify-between">
+                    <div class="relative w-full">
+                        <img
+                            src="https://images.unsplash.com/photo-1492724441997-5dc865305da7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80"
+                            alt=""
+                            class="aspect-video w-full rounded-2xl bg-gray-100 object-cover sm:aspect-2/1 lg:aspect-3/2"
+                        />
+                        <div class="absolute inset-0 rounded-2xl ring-1 ring-gray-900/10 ring-inset"></div>
+                    </div>
+                    <div class="max-w-xl">
+                        <div class="mt-8 flex items-center gap-x-4 text-xs">
+                            <time datetime="2020-02-12" class="text-gray-500">Feb 12, 2020</time>
+                            <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Business</a>
+                        </div>
+                        <div class="group relative">
+                            <h3 class="mt-3 text-lg/6 font-semibold text-gray-900 group-hover:text-gray-600">
+                                <a href="#">
+                                    <span class="absolute inset-0"></span>
+                                    Improve your customer experience
+                                </a>
+                            </h3>
+                            <p class="mt-5 line-clamp-3 text-sm/6 text-gray-600">
+                                Cupiditate maiores ullam eveniet adipisci in doloribus nulla minus. Voluptas iusto libero adipisci rem et corporis. Nostrud sint anim sunt aliqua.
+                                Nulla eu labore irure incididunt velit cillum quis magna dolore.
+                            </p>
+                        </div>
+                        <div class="relative mt-8 flex items-center gap-x-4">
+                            <img
+                                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                                alt=""
+                                class="size-10 rounded-full bg-gray-100"
+                            />
+                            <div class="text-sm/6">
+                                <p class="font-semibold text-gray-900">
+                                    <a href="#">
+                                        <span class="absolute inset-0"></span>
+                                        Tom Cook
+                                    </a>
+                                </p>
+                                <p class="text-gray-600">Director of Product</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-white pt-24 sm:pt-32">
+        <div class="mx-auto max-w-2xl px-6 lg:max-w-7xl lg:px-8">
+            <h2 class="text-base/7 font-semibold text-indigo-600">Deploy faster</h2>
+            <p class="mt-2 max-w-lg text-4xl font-semibold tracking-tight text-pretty text-gray-950 sm:text-5xl">Everything you need to deploy your app</p>
+            <div class="mt-10 grid grid-cols-1 gap-4 sm:mt-16 lg:grid-cols-6 lg:grid-rows-2">
+                <div class="relative lg:col-span-3">
+                    <div class="absolute inset-px rounded-lg bg-white max-lg:rounded-t-[2rem] lg:rounded-tl-[2rem]"></div>
+                    <div
+                        class="relative flex h-full flex-col overflow-hidden rounded-[calc(var(--radius-lg)+1px)] max-lg:rounded-t-[calc(2rem+1px)] lg:rounded-tl-[calc(2rem+1px)]"
+                    >
+                        <img class="h-80 object-cover object-left" src="https://tailwindcss.com/plus-assets/img/component-images/bento-01-performance.png" alt="" />
+                        <div class="p-10 pt-4">
+                            <h3 class="text-sm/4 font-semibold text-indigo-600">Performance</h3>
+                            <p class="mt-2 text-lg font-medium tracking-tight text-gray-950">Lightning-fast builds</p>
+                            <p class="mt-2 max-w-lg text-sm/6 text-gray-600">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida justo et nulla efficitur, maximus egestas sem pellentesque.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="pointer-events-none absolute inset-px rounded-lg shadow-sm ring-1 ring-black/5 max-lg:rounded-t-[2rem] lg:rounded-tl-[2rem]"></div>
+                </div>
+                <div class="relative lg:col-span-3">
+                    <div class="absolute inset-px rounded-lg bg-white lg:rounded-tr-[2rem]"></div>
+                    <div class="relative flex h-full flex-col overflow-hidden rounded-[calc(var(--radius-lg)+1px)] lg:rounded-tr-[calc(2rem+1px)]">
+                        <img class="h-80 object-cover object-left lg:object-right" src="https://tailwindcss.com/plus-assets/img/component-images/bento-01-releases.png" alt="" />
+                        <div class="p-10 pt-4">
+                            <h3 class="text-sm/4 font-semibold text-indigo-600">Releases</h3>
+                            <p class="mt-2 text-lg font-medium tracking-tight text-gray-950">Push to deploy</p>
+                            <p class="mt-2 max-w-lg text-sm/6 text-gray-600">
+                                Curabitur auctor, ex quis auctor venenatis, eros arcu rhoncus massa, laoreet dapibus ex elit vitae odio.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="pointer-events-none absolute inset-px rounded-lg shadow-sm ring-1 ring-black/5 lg:rounded-tr-[2rem]"></div>
+                </div>
+                <div class="relative lg:col-span-2">
+                    <div class="absolute inset-px rounded-lg bg-white lg:rounded-bl-[2rem]"></div>
+                    <div class="relative flex h-full flex-col overflow-hidden rounded-[calc(var(--radius-lg)+1px)] lg:rounded-bl-[calc(2rem+1px)]">
+                        <img class="h-80 object-cover object-left" src="https://tailwindcss.com/plus-assets/img/component-images/bento-01-speed.png" alt="" />
+                        <div class="p-10 pt-4">
+                            <h3 class="text-sm/4 font-semibold text-indigo-600">Speed</h3>
+                            <p class="mt-2 text-lg font-medium tracking-tight text-gray-950">Built for power users</p>
+                            <p class="mt-2 max-w-lg text-sm/6 text-gray-600">Sed congue eros non finibus molestie. Vestibulum euismod augue.</p>
+                        </div>
+                    </div>
+                    <div class="pointer-events-none absolute inset-px rounded-lg shadow-sm ring-1 ring-black/5 lg:rounded-bl-[2rem]"></div>
+                </div>
+                <div class="relative lg:col-span-2">
+                    <div class="absolute inset-px rounded-lg bg-white"></div>
+                    <div class="relative flex h-full flex-col overflow-hidden rounded-[calc(var(--radius-lg)+1px)]">
+                        <img class="h-80 object-cover" src="https://tailwindcss.com/plus-assets/img/component-images/bento-01-integrations.png" alt="" />
+                        <div class="p-10 pt-4">
+                            <h3 class="text-sm/4 font-semibold text-indigo-600">Integrations</h3>
+                            <p class="mt-2 text-lg font-medium tracking-tight text-gray-950">Connect your favorite tools</p>
+                            <p class="mt-2 max-w-lg text-sm/6 text-gray-600">Maecenas at augue sed elit dictum vulputate, in nisi aliquam maximus arcu.</p>
+                        </div>
+                    </div>
+                    <div class="pointer-events-none absolute inset-px rounded-lg shadow-sm ring-1 ring-black/5"></div>
+                </div>
+                <div class="relative lg:col-span-2">
+                    <div class="absolute inset-px rounded-lg bg-white max-lg:rounded-b-[2rem] lg:rounded-br-[2rem]"></div>
+                    <div
+                        class="relative flex h-full flex-col overflow-hidden rounded-[calc(var(--radius-lg)+1px)] max-lg:rounded-b-[calc(2rem+1px)] lg:rounded-br-[calc(2rem+1px)]"
+                    >
+                        <img class="h-80 object-cover" src="https://tailwindcss.com/plus-assets/img/component-images/bento-01-network.png" alt="" />
+                        <div class="p-10 pt-4">
+                            <h3 class="text-sm/4 font-semibold text-indigo-600">Network</h3>
+                            <p class="mt-2 text-lg font-medium tracking-tight text-gray-950">Globally distributed CDN</p>
+                            <p class="mt-2 max-w-lg text-sm/6 text-gray-600">Aenean vulputate justo commodo auctor vehicula in malesuada semper.</p>
+                        </div>
+                    </div>
+                    <div class="pointer-events-none absolute inset-px rounded-lg shadow-sm ring-1 ring-black/5 max-lg:rounded-b-[2rem] lg:rounded-br-[2rem]"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </MainLayout>
