--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -1,5 +1,5 @@
 @theme {
-    --font-sans: "Montserrat", "Montserrat-fallback", "sans-serif";
+    /* --font-sans: "Montserrat", "Montserrat-fallback", "sans-serif"; */
 
     /* Black */
     --color-black-nightblack: oklch(0.14 0 0); /* #232323 */
@@ -162,6 +162,11 @@
     --text-xxs--line-height: calc(1 / 0.625);
 }
 
+@layer base {
+    [x-cloak] {
+        display: none !important;
+    }
+}
 @layer components {
     h1 {
         font-size: var(--text-4xl);
@@ -211,83 +216,5 @@
 @utility scrollbar-hidden {
     &::-webkit-scrollbar {
         display: none;
-    }
-}
-@utility swap {
-    & {
-        @apply relative inline-grid cursor-pointer place-content-center select-none;
-
-        & > * {
-            @apply col-start-1 row-start-1 transition-all duration-300 ease-out;
-        }
-
-        & input {
-            @apply hidden appearance-none;
-        }
-
-        & .swap-on,
-        & .swap-indeterminate,
-        & input:indeterminate ~ .swap-on {
-            @apply opacity-0;
-        }
-
-        & input:checked ~ .swap-off,
-        &.swap-active .swap-off,
-        & input:indeterminate ~ .swap-off {
-            @apply opacity-0;
-        }
-
-        & input:checked ~ .swap-on,
-        &.swap-active .swap-on,
-        & input:indeterminate ~ .swap-indeterminate {
-            @apply opacity-100;
-        }
-
-        &.swap-rotate {
-            .swap-on,
-            .swap-indeterminate,
-            input:indeterminate ~ .swap-on {
-                @apply rotate-45;
-            }
-
-            input:checked ~ .swap-off,
-            &.swap-active .swap-off,
-            input:indeterminate ~ .swap-off {
-                @apply -rotate-45;
-            }
-
-            input:checked ~ .swap-on,
-            &.swap-active .swap-on,
-            input:indeterminate ~ .swap-indeterminate {
-                @apply rotate-0;
-            }
-        }
-
-        &.swap-flip {
-            transform-style: preserve-3d;
-            perspective: 16em;
-
-            .swap-on,
-            .swap-indeterminate,
-            input:indeterminate ~ .swap-on {
-                @apply opacity-100;
-                transform: rotateY(180deg);
-                backface-visibility: hidden;
-            }
-
-            input:checked ~ .swap-off,
-            &.swap-active .swap-off,
-            input:indeterminate ~ .swap-off {
-                @apply opacity-100;
-                transform: rotateY(-180deg);
-                backface-visibility: hidden;
-            }
-
-            input:checked ~ .swap-on,
-            &.swap-active .swap-on,
-            input:indeterminate ~ .swap-indeterminate {
-                transform: rotateY(0deg);
-            }
-        }
     }
 }
