change favicon path

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,6 +1,4 @@
 ---
-import { BASE_URL } from "@/consts"
-
 export interface Props {
     title: string
     description: string
@@ -13,7 +11,7 @@ const { title, description } = Astro.props
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/x-icon" href={`${BASE_URL}/favicon.ico`} />
+<link type="image/x-icon" rel="shortcut icon" href="https://cdn.detik.net.id/detikcom/images/favicon.ico?v=202509101427" />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
